[tool.poetry]
name = "flakycode"
version = "0.1.0"
description = "A package showcasing common examples of flaky tests"
packages = [{ include = "flakycode", from = "src" }]
authors = []

readme = "README.md"
include = [
    "README.md",
    "LICENSE.txt",
    "src/flakycode/py.typed",
]
exclude = [
    "*.so",
    "*.pyc",
    "*~",
    "#*",
    ".git*",
    ".coverage*",
    "DS_Store",
    "__pycache__",
]


[tool.poetry.dependencies]
python = ">=3.8.1, <3.12"
numpy = "1.24"
scipy = "1.9.1"
pandas = "^2.0.3"
hypothesis = "^6.82.4"
pytest-timeout = "^2.1.0"
stopit = "^1.1.2"
pytest-randomly = "^3.13.0"
joblib = "^1.3.2"
psutil = "^5.9.5"
matplotlib = "^3.7.2"
psycopg2 = "^2.9.7"
anyio = "^3.7.1"
requests = "^2.31.0"
backoff = "^2.2.1"
pytest-asyncio = "^0.21.1"
aiofiles = "^23.2.1"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
# type hints
mypy = "1.3.0"
# formatting
black = "23.7.0"
# linting
ruff = "0.0.269"
# import sorting
isort = "5.12.0"
# testing
pytest = "7.3.1"
pytest-sugar = "0.9.7"
# on-demand environments
nox = "2023.4.22"
nox-poetry = "1.0.2"

[tool.poetry.group.dev.dependencies]
ipython = "8.11"

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
warn_no_return = false
allow_untyped_defs = true
allow_untyped_decorators = true

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = ["flakycode"]
order_by_type = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
